# ComfyUI-PyPromptGenerator

./: .gitignore  LICENSE  README-JA.md  README.md  __init__.py  pyproject.toml  run_sample.py  test_auto_refresh.py  test_integration.py
.github/: ISSUE_TEMPLATE.md
sample_scripts/: mount_fuji_generator.py  sample1.py  simple_example.py
src/pyprompt_generator/: nodes.py  utils.py
tests/: __init__.py  conftest.py  pytest.ini  test_choice.py  test_file_generator.py  test_flatten.py  test_integration.py  test_nested_wildcards.py  test_pyprompt_generator.py  test_utils.py  test_wildcard.py  test_wildcard_manager.py
tests/sample_scripts/: README.md  advanced_script.py  prompt_script.py
wildcards/: fuji_colors.txt  fuji_compositions.txt  fuji_compositions_complex.txt  fuji_details.txt  fuji_foreground.txt  fuji_seasons.txt  mount_fuji_styles.txt
