[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyprompt_generator"
version = "0.0.1"
description = "Generate positve/negative prompt via python script"
readme = "README.md"
license = {text = "MIT license"}
requires-python = ">=3.10"
classifiers = []
dependencies = [
]


[project.optional-dependencies]
dev = [
    "bump-my-version",
    "coverage",  # testing
    "mypy",  # linting
    "pre-commit", # runs linting on commit
    "pytest",  # testing
    "ruff",  # linting
]

[project.urls]
Repository = "https://github.com/pickles/ComfyUI-PyPromptGenerator"
BugTracker = "https://github.com/pickles/ComfyUI-PyPromptGenerator/issues"
Documentation = "https://github.com/pickles/ComfyUI-PyPromptGenerator/wiki"


[tool.comfy]
PublisherId = "pickles"
DisplayName = "PyPromptGenerator"
Icon = ""
Tags = []
Repository = "https://github.com/pickles/ComfyUI-PyPromptGenerator"

includes = []

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow tests",
]

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
# extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["src", "tests"]
target-version = "py39"

# Add rules to ban exec/eval
[tool.ruff.lint]
select = [
    "S102",  # exec-builtin
    "S307",  # eval-used
    "W293",
    "F",  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
    # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
]
ignore = [
    "F401",  # Ignore unused imports (they may be used dynamically)
]

[tool.ruff.lint.per-file-ignores]
"src/pyprompt_generator/nodes.py" = ["F401"]  # Allow unused imports in nodes.py (used dynamically)

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "sample_scripts"]
ignore = ["sample_scripts"]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportDuplicateImport = true
pythonVersion = "3.10"
